全体の最終調整

--- a/public/about/about.html
+++ b/public/about/about.html
@@ -3,7 +3,7 @@
   <head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# website: http://ogp.me/ns/website#">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="favicon.ico">
+    <link rel="icon" href="../favicon.ico">
     <title>芸工祭2023</title>
     <meta name = "description" content = "今年のテーマは「NEON」。開催日時、アクセスなどを確認できます。輝く夜へご招待！" />
 
@@ -187,6 +187,7 @@
         <h3>アクセス</h3>
         <h2>ACCESS</h2>
         <img src="../image/about/map.webp" class="map-img" />
+        <p style="text-align: left; color: #ffffff;">※送迎を含むお車でのご来場はお断りしております。ご来場の際は公共交通機関をご利用ください。</p>
       </div>
       <div class="bus">
         <h2>バスでお越しの方</h2>
