--- a/public/cm/goods.html
+++ b/public/cm/goods.html
@@ -3,7 +3,7 @@
   <head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# website: http://ogp.me/ns/website#">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="favicon.ico">
+    <link rel="icon" href="../favicon.ico">
     <title>芸工祭2023</title>
     <meta name = "description" content = "オリジナルNEONグッズ情報。ステッカーや缶バッジ、アクリルキーホルダーなど。" />
 
@@ -163,27 +163,37 @@
       </div>
     </div>
     <div class="goods">
-      <h2>グッズ</h2>
+      <h2>GOODS</h2>
       <div class="contents">
         <div class="area">
-          <div class="goods-container"></div>
-          <p>NEOラバーバンド<br /><span>¥600</span></p>
+          <div class="goods-container">
+            <img src = "../image/goods/rubber.webp" alt = "ラバーバンド画像">
+          </div>
+          <p><span>NEOラバーバンド</span><br />¥600</p>
         </div>
         <div class="area">
-          <div class="goods-container"></div>
-          <p>ロゴ&チケット風ステッカー<br /><span>¥価格</span></p>
+          <div class="goods-container">
+            <img src = "../image/goods/sticker.webp" alt = "ステッカー画像">
+          </div>
+          <p><span>ロゴ&チケット風ステッカー</span><br />各¥100</p>
         </div>
         <div class="area">
-          <div class="goods-container"></div>
-          <p>缶バッジ<br /><span>¥価格</span></p>
+          <div class="goods-container">
+            <img src = "../image/goods/badge.webp" alt = "缶バッジ画像">
+          </div>
+          <p><span>缶バッジ</span><br />¥200</p>
         </div>
         <div class="area">
-          <div class="goods-container"></div>
-          <p>アクリルキーホルダー<br /><span>¥価格</span></p>
+          <div class="goods-container">
+            <img src = "../image/goods/keychain.webp" alt = "キーホルダー画像">
+          </div>
+          <p><span>アクリルキーホルダー</span><br />¥400</p>
         </div>
         <div class="area">
-          <div class="goods-container"></div>
-          <p>ミニチャーム<br /><span>¥価格</span></p>
+          <div class="goods-container">
+            <img src = "../image/goods/charm.webp" alt = "ミニチャーム画像">
+          </div>
+          <p><span>ミニチャーム</span><br />各¥300</p>
         </div>
       </div>
     </div>
