--- a/public/event/stage.html
+++ b/public/event/stage.html
@@ -5,7 +5,7 @@
   >
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="favicon.ico" />
+    <link rel="icon" href="../favicon.ico" />
     <title>芸工祭2023</title>
     <meta
       name="description"
@@ -203,7 +203,7 @@
             <h3>1日目</h3>
           </div>
           <div class="schedule-img">
-            <img src="../image/event/stage/stage_day1.png" alt="1日目スケジュール" />
+            <img src="../image/event/stage/stage_soon.png" alt="1日目スケジュール" />
           </div>
         </div>
         <div class="one-of-schedules">
@@ -211,7 +211,7 @@
             <h3>2日目</h3>
           </div>
           <div class="schedule-img">
-            <img src="../image/event/stage/stage_day2.png" alt="2日目スケジュール" />
+            <img src="../image/event/stage/stage_soon.png" alt="2日目スケジュール" />
           </div>
         </div>
       </div>
@@ -230,39 +230,46 @@
         </div>
         <div class="schedule-img-sp">
           <img
-            src="../image/event/stage/stage_day1.png"
+            src="../image/event/stage/stage_soon.png"
             alt="1日目スケジュール"
             id="targetImage"
           />
         </div>
       </div>
       <div class="cm">
-        <div class="movie-container">
-          <iframe
-            src="https://www.youtube.com/embed/H0CJ80vJNB4?si=bzC76KmMf5Lf199b"
+        <div class="area">
+          <div class="movie-container">
+            <iframe
+            src="https://www.youtube.com/embed/zlaxdJl3e3c?si=786h1QCUxwwLXzk6"
             title="YouTube video player"
             frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-            allowfullscreen
-          ></iframe>
+            allowfullscreen></iframe>
+          </div>
+          <p>昼ステージ</p>
         </div>
-        <div class="movie-container">
-          <iframe
-            src="https://www.youtube.com/embed/H0CJ80vJNB4?si=bzC76KmMf5Lf199b"
-            title="YouTube video player"
-            frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-            allowfullscreen
-          ></iframe>
+        <div class="area">
+          <div class="movie-container">
+            <p>coming soon...</p>
+          </div>
+          <p>昼ステージ２</p>
         </div>
-        <div class="movie-container">
-          <iframe
-            src="https://www.youtube.com/embed/H0CJ80vJNB4?si=bzC76KmMf5Lf199b"
+        <div class="area">
+          <div class="movie-container">
+            <iframe
+            src="https://www.youtube.com/embed/FPOg9Zpkb_0?si=W0n7QcPrXppa8K_H"
             title="YouTube video player"
             frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-            allowfullscreen
-          ></iframe>
+            allowfullscreen></iframe>
+          </div>
+          <p>夜ステバンド紹介</p>
+        </div>
+        <div class="area">
+          <div class="movie-container">
+            <p>coming soon...</p>
+          </div>
+          <p>夜ステージ２</p>
         </div>
       </div>
     </main>
