--- a/public/event/store.html
+++ b/public/event/store.html
@@ -5,7 +5,7 @@
   >
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="favicon.ico" />
+    <link rel="icon" href="../favicon.ico" />
     <title>芸工祭2023</title>
     <meta
       name="description"
@@ -204,10 +204,6 @@
               <p class = discription>
                 学年の枠を飛び越え集結した芸工生アーティストたちによるオムニバスCDを販売します！
               </p>
-              <!-- <div class="sns-container">
-                <img src = "../image/common/logo_insta.svg">
-                <img src = "../image/common/logo_x.svg">
-              </div> -->
             </div>
           </div>
           <div class="shadow">
@@ -247,10 +243,14 @@
             </div>
           </div>
           <div class="shadow">
-            <div class="store">
+            <div class="store cm">
               <div class="icon-container"></div>
-              <p class="name">ORasa</p>
+              <p class="name">ORasa HARAJUKU IKuDa</p>
               <p class = discription>可愛い！楽しい！美味しい！をテーマに、みんな大好きクロッフルを売ります‼️<br>カラフルでポップな世界観をお楽しみ下さい!!!</p>
+              <a href = "https://youtu.be/p_p5b0qVufA" target="_blank" class="sns-container">
+                <img src = "../image/event/booth/icon_cm.svg">
+                <p class="cm_p">cm動画</p>
+              </a>
             </div>
           </div>
           <div class="shadow">
@@ -272,12 +272,16 @@
             </div>
           </div>
           <div class="shadow">
-            <div class="store">
+            <div class="store cm">
               <div class="icon-container"></div>
               <p class="name">ごっちゃや</p>
               <p class = discription>
                 4人が4種類の手作り雑貨をごちゃ混ぜにして売ります。<br />1つのお店で4度美味しい！あなたのお気に入りの商品に絶対出会えます！<br />芸工祭当日、ご来店お待ちしております
               </p>
+              <a href = "https://youtu.be/QkKgwUQ44Qs" target="_blank" class="sns-container">
+                <img src = "../image/event/booth/icon_cm.svg">
+                <p class="cm_p">cm動画</p>
+              </a>
             </div>
           </div>
           <div class="shadow">
@@ -356,10 +360,14 @@
             </div>
           </div>
           <div class="shadow">
-            <div class="store">
+            <div class="store cm">
               <div class="icon-container"></div>
-              <p class="name">Larry's Dinner</p>
-              <p class = discription>〜青い鳥焼きます〜<br>焼いた鳥をみんなでわいわい売ってます。SNSも要チェック!!<br>この世界から消えつつあるLarryを、私たちは忘れない。これは、青い鳥に捧ぐ鎮魂歌(レクイエム)</p>
+              <p class="name">Larry's Dinner 〜青い鳥焼きます〜</p>
+              <p class = discription>焼いた鳥をみんなでわいわい売ってます。SNSも要チェック!!<br>この世界から消えつつあるLarryを、私たちは忘れない。これは、青い鳥に捧ぐ鎮魂歌(レクイエム)</p>
+              <a href = "https://youtu.be/5P-PgckNzDo" target="_blank" class="sns-container">
+                <img src = "../image/event/booth/icon_cm.svg">
+                <p class="cm_p">cm動画</p>
+              </a>
             </div>
           </div>
         </div>
