--- a/public/event/ws.html
+++ b/public/event/ws.html
@@ -3,7 +3,7 @@
   <head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# website: http://ogp.me/ns/website#">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="favicon.ico">
+    <link rel="icon" href="../favicon.ico">
     <title>芸工祭2023</title>
     <meta name = "description" content = "参加型ワークショップの魅力。クリエイティブな体験をしよう。" />
 
@@ -243,14 +243,11 @@
         </div>
       </div>
       <div class="cm">
-        <div class="movie-container">
-          <iframe
-          src="https://www.youtube.com/embed/H0CJ80vJNB4?si=bzC76KmMf5Lf199b" 
-          title="YouTube video player" 
-          frameborder="0" 
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
-          allowfullscreen
-          ></iframe>
+        <div class="area">
+          <div class="movie-container">
+            <p>coming soon...</p>
+          </div>
+          <p>ワークショップCM</p>
         </div>
       </div>
     </div>
