--- a/public/index.html
+++ b/public/index.html
@@ -202,7 +202,7 @@
               <img src="./image/index/icon_booth.svg">
               <p>ブース</p>
             </a>
-            <a href = "" class="index-game">
+            <a href = "https://geikousai-ncu.com/2023/pre/game.html" target="_blank" class="index-game">
               <img src="./image/index/icon_game.svg">
               <p>ゲーム</p>
             </a>
