--- a/public/cm/movie.html
+++ b/public/cm/movie.html
@@ -3,7 +3,7 @@
   <head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# website: http://ogp.me/ns/website#">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="favicon.ico">
+    <link rel="icon" href="../favicon.ico">
     <title>芸工祭2023</title>
     <meta name = "description" content = "芸工祭映像一挙紹介。芸工祭の輝きを映像で楽しもう。" />
 
@@ -163,7 +163,7 @@
       </div>
     </div>
     <div class="movie">
-      <h2>映像</h2>
+      <h2>MOVIE</h2>
       <div class="contents">
         <div class="area">
           <div class="movie-container">
@@ -179,63 +179,112 @@
         </div>
         <div class="area">
           <div class="movie-container">
-            <iframe
-            src="https://www.youtube.com/embed/H0CJ80vJNB4?si=bzC76KmMf5Lf199b" 
-            title="YouTube video player" 
-            frameborder="0" 
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
-            allowfullscreen
-            ></iframe>
+            <p>coming soon...</p>
           </div>
-          <p>タイトル</p>
+          <p>オープニング</p>
+        </div>
+        <div class="area">
+          <div class="movie-container">
+            <p>coming soon...</p>
+          </div>
+          <p>エンディング</p>
+        </div>
+        <div class="area">
+          <div class="movie-container">
+            <iframe 
+              width="560"
+              height="315"
+              src="https://www.youtube.com/embed/eRZSHEPgL_I?si=zik4SjZobXGtdSW7"
+              title="YouTube video player"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              allowfullscreen></iframe>
+          </div>
+          <p>カフェ</p>
+        </div>
+        <div class="area">
+          <div class="movie-container">
+            <p>coming soon...</p>>
+          </div>
+          <p>ワークショップ</p>
         </div>
         <div class="area">
           <div class="movie-container">
             <iframe
-            src="https://www.youtube.com/embed/H0CJ80vJNB4?si=bzC76KmMf5Lf199b" 
-            title="YouTube video player" 
-            frameborder="0" 
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
-            allowfullscreen
-            ></iframe>
+            src="https://www.youtube.com/embed/zlaxdJl3e3c?si=786h1QCUxwwLXzk6"
+            title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            allowfullscreen></iframe>
           </div>
-          <p>タイトル</p>
+          <p>昼ステージ</p>
+        </div>
+        <div class="area">
+          <div class="movie-container">
+            <p>coming soon...</p>
+          </div>
+          <p>昼ステージ２</p>
         </div>
         <div class="area">
           <div class="movie-container">
             <iframe
-            src="https://www.youtube.com/embed/H0CJ80vJNB4?si=bzC76KmMf5Lf199b" 
-            title="YouTube video player" 
-            frameborder="0" 
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
-            allowfullscreen
-            ></iframe>
+            src="https://www.youtube.com/embed/FPOg9Zpkb_0?si=W0n7QcPrXppa8K_H"
+            title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            allowfullscreen></iframe>
           </div>
-          <p>タイトル</p>
+          <p>夜ステバンド紹介</p>
+        </div>
+        <div class="area">
+          <div class="movie-container">
+            <p>coming soon...</p>
+          </div>
+          <p>夜ステージ２</p>
         </div>
         <div class="area">
           <div class="movie-container">
             <iframe
-            src="https://www.youtube.com/embed/H0CJ80vJNB4?si=bzC76KmMf5Lf199b" 
-            title="YouTube video player" 
-            frameborder="0" 
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
-            allowfullscreen
-            ></iframe>
+            src="https://www.youtube.com/embed/owSFACkRo2M?si=yIOdKylY54rqRLd5"
+            title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            allowfullscreen></iframe>
           </div>
-          <p>タイトル</p>
+          <p>グッズ紹介映像</p>
         </div>
         <div class="area">
           <div class="movie-container">
             <iframe
-            src="https://www.youtube.com/embed/H0CJ80vJNB4?si=bzC76KmMf5Lf199b" 
-            title="YouTube video player" 
-            frameborder="0" 
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
-            allowfullscreen
-            ></iframe>
+            src="https://www.youtube.com/embed/5P-PgckNzDo?si=qFnNlZsgF_GUAL2V"
+            title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            allowfullscreen></iframe>
           </div>
-          <p>タイトル</p>
+          <p>ブースCM「Larry's Diner 〜青い鳥焼きます〜」</p>
+        </div>
+        <div class="area">
+          <div class="movie-container">
+            <iframe
+            src="https://www.youtube.com/embed/p_p5b0qVufA?si=5W0vJ_1GdUt7hSFm"
+            title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            allowfullscreen></iframe>
+          </div>
+          <p>ブースCM「ORasa HARAJUKU IKuDa」</p>
+        </div>
+        <div class="area">
+          <div class="movie-container">
+            <iframe
+            src="https://www.youtube.com/embed/QkKgwUQ44Qs?si=1ZsU1U9m6l_-hLEJ"
+            title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            allowfullscreen></iframe>
+          </div>
+          <p>ブースCM「ごっちゃや」</p>
         </div>
       </div>
     </div>
