--- a/public/event/booth.html
+++ b/public/event/booth.html
@@ -5,7 +5,7 @@
   >
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="favicon.ico" />
+    <link rel="icon" href="../favicon.ico" />
     <title>芸工祭2023</title>
     <meta
       name="description"
@@ -207,25 +207,14 @@
         </div>
         <div class="container">
           <div class="solo-container">
-            <img src="../image/event/booth/solo.webp" alt="個人作品" />
+            <img src="../image/event/booth/choseichu.png" alt="個人作品" />
           </div>
           <div class="disco-container">
-            <img src="../image/event/booth/solo.webp" alt="団体作品" />
+            <img src="../image/event/booth/choseichu.png" alt="団体作品" />
           </div>
           <div class="works-container">
-            <img src="../image/event/booth/solo.webp" alt="実習作品" />
+            <img src="../image/event/booth/choseichu.png" alt="実習作品" />
           </div>
-        </div>
-      </div>
-      <div class="cm">
-        <div class="movie-container">
-          <iframe
-            src="https://www.youtube.com/embed/H0CJ80vJNB4?si=bzC76KmMf5Lf199b"
-            title="YouTube video player"
-            frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-            allowfullscreen
-          ></iframe>
         </div>
       </div>
     </div>
