--- a/public/event/cafe.html
+++ b/public/event/cafe.html
@@ -5,7 +5,7 @@
   >
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="favicon.ico" />
+    <link rel="icon" href="../favicon.ico" />
     <title>芸工祭2023</title>
     <meta
       name="description"
@@ -219,15 +219,18 @@
         </div>
       </div>
       <div class="cm">
-        <div class="movie-container">
-          <iframe 
-          width="560"
-          height="315"
-          src="https://www.youtube.com/embed/eRZSHEPgL_I?si=zik4SjZobXGtdSW7"
-          title="YouTube video player"
-          frameborder="0"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-          allowfullscreen></iframe>
+        <div class="area">
+          <div class="movie-container">
+            <iframe 
+            width="560"
+            height="315"
+            src="https://www.youtube.com/embed/eRZSHEPgL_I?si=zik4SjZobXGtdSW7"
+            title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            allowfullscreen></iframe>
+          </div>
+          <p>カフェCM</p>
         </div>
       </div>
     </main>
