title調整、ハンバーガー調整

--- a/public/about/about.html
+++ b/public/about/about.html
@@ -1,25 +1,42 @@
 <!DOCTYPE html>
 <html lang="ja">
-  <head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# website: http://ogp.me/ns/website#">
+  <head
+    prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# website: http://ogp.me/ns/website#"
+  >
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="../favicon.ico">
-    <title>芸工祭2023</title>
-    <meta name = "description" content = "今年のテーマは「NEON」。開催日時、アクセスなどを確認できます。輝く夜へご招待！" />
+    <link rel="icon" href="../favicon.ico" />
+    <title>ABOUT | 芸工祭2023</title>
+    <meta
+      name="description"
+      content="今年のテーマは「NEON」。開催日時、アクセスなどを確認できます。輝く夜へご招待！"
+    />
 
-    <meta property = "og:url" content="https://geikousai-ncu.com/2023/" />
-    <meta property = "og:type" content="website" />
-    <meta property = "og:title" content = "芸工祭2023" />
-    <meta property = "og:description" content = "今年のテーマは「NEON」。開催日時、アクセスなどを確認できます。輝く夜へご招待！"/>
-    <meta prpperty = "og:site_name" content = "芸工祭2023" />
-    <meta prpperty = "og:image" content = "https://geikousai-ncu.com/2023/image/og_img.png" />
+    <meta property="og:url" content="https://geikousai-ncu.com/2023/" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="芸工祭2023" />
+    <meta
+      property="og:description"
+      content="今年のテーマは「NEON」。開催日時、アクセスなどを確認できます。輝く夜へご招待！"
+    />
+    <meta prpperty="og:site_name" content="芸工祭2023" />
+    <meta
+      prpperty="og:image"
+      content="https://geikousai-ncu.com/2023/image/og_img.png"
+    />
 
-    <meta name = "twitter:card" content="summary" />
-    <meta name = "twitter:title" content="芸工祭2023"/>
-    <meta name = "twitter:description" content="今年のテーマは「NEON」。開催日時、アクセスなどを確認できます。輝く夜へご招待！"/>
-    <meta name = "twitter:image" content = "https://geikousai-ncu.com/2023/image/og_img.png"/>
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:title" content="芸工祭2023" />
+    <meta
+      name="twitter:description"
+      content="今年のテーマは「NEON」。開催日時、アクセスなどを確認できます。輝く夜へご招待！"
+    />
+    <meta
+      name="twitter:image"
+      content="https://geikousai-ncu.com/2023/image/og_img.png"
+    />
 
-    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/lottie-web/5.12.2/lottie.min.js"
@@ -72,18 +89,20 @@
       <nav class="navigation">
         <div class="navigation_frame">
           <div style="width: 40%">
-            <a href = "../about/about.html">ABOUT</a>
+            <a href="../about/about.html">ABOUT</a>
             <div class="navigation_list">
               <div class="neon-line"></div>
               <ul class="navigation_ul">
                 <li>
-                  <a href="./about.html#theme">テーマ</a>
+                  <a href="./about.html#theme" id="close-hamburger">テーマ</a>
                 </li>
                 <li>
-                  <a href="./about.html#access">アクセス</a>
+                  <a href="./about.html#access" id="close-hamburger"
+                    >アクセス</a
+                  >
                 </li>
                 <li>
-                  <a href="./about.html#sns">SNS</a>
+                  <a href="./about.html#sns" id="close-hamburger">SNS</a>
                 </li>
               </ul>
             </div>
@@ -109,7 +128,7 @@
             </div>
           </div>
           <div style="width: 40%; padding-top: 10%">
-            <a href = "../cm/movie.html">CM</a>
+            <a href="../cm/movie.html">CM</a>
             <div class="navigation_list">
               <div class="neon-line" style="height: 60px"></div>
               <ul class="navigation_ul">
@@ -130,11 +149,11 @@
               rel="noreferrer noopener"
               ><img src="../image/common/logo_insta.svg" alt="インスタ"
             /></a>
-            <a 
+            <a
               href="https://twitter.com/geik0"
               target="_blank"
               rel="no-referrer noopener"
-              ><img src="../image/common/logo_x.svg" alt="x" 
+              ><img src="../image/common/logo_x.svg" alt="x"
             /></a>
             <a
               href="https://www.tiktok.com/@geiko_2023"
@@ -187,7 +206,9 @@
         <h3>アクセス</h3>
         <h2>ACCESS</h2>
         <img src="../image/about/map.webp" class="map-img" />
-        <p style="text-align: left; color: #ffffff;">※送迎を含むお車でのご来場はお断りしております。ご来場の際は公共交通機関をご利用ください。</p>
+        <p style="text-align: left; color: #ffffff">
+          ※送迎を含むお車でのご来場はお断りしております。ご来場の際は公共交通機関をご利用ください。
+        </p>
       </div>
       <div class="bus">
         <h2>バスでお越しの方</h2>
@@ -209,11 +230,11 @@
             rel="noreferrer noopener"
             ><img src="../image/common/logo_insta.svg" alt="インスタ"
           /></a>
-          <a 
-          href="https://twitter.com/geik0"
-          target="_blank"
-          rel="no-referrer noopener"
-          ><img src="../image/common/logo_x.svg" alt="x" 
+          <a
+            href="https://twitter.com/geik0"
+            target="_blank"
+            rel="no-referrer noopener"
+            ><img src="../image/common/logo_x.svg" alt="x"
           /></a>
           <a
             href="https://www.tiktok.com/@geiko_2023"
@@ -228,8 +249,10 @@
       <p>
         <span>名古屋市立大学芸術工学部</span>
         <br />
-        <a href = "https://www.nagoya-cu.ac.jp/sda/">名古屋市立大学芸術工学部HP</a>
-        <br>
+        <a href="https://www.nagoya-cu.ac.jp/sda/"
+          >名古屋市立大学芸術工学部HP</a
+        >
+        <br />
         〒464-0083 名古屋市千種区北千種2丁目1番10号 <br />TEL052-721-1225(代)
         FAX052-721-3110
       </p>
