--- a/public/cm/movie.html
+++ b/public/cm/movie.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="../favicon.ico">
-    <title>芸工祭2023</title>
+    <title>映像 | 芸工祭2023</title>
     <meta name = "description" content = "芸工祭映像一挙紹介。芸工祭の輝きを映像で楽しもう。" />
 
     <meta property = "og:url" content="https://geikousai-ncu.com/2023/" />
