--- a/public/event/cafe.html
+++ b/public/event/cafe.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="../favicon.ico" />
-    <title>芸工祭2023</title>
+    <title>カフェ | 芸工祭2023</title>
     <meta
       name="description"
       content="カフェの店名は「NEw-rON」！素敵な料理と楽しい雰囲気をお楽しみください！"
