--- a/public/event/store.html
+++ b/public/event/store.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="../favicon.ico" />
-    <title>芸工祭2023</title>
+    <title>模擬店 | 芸工祭2023</title>
     <meta
       name="description"
       content="学生のクリエイティビティが詰まった作品展示。模擬店情報も要チェック。"
