--- a/public/event/ws.html
+++ b/public/event/ws.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="../favicon.ico">
-    <title>芸工祭2023</title>
+    <title>ワークショップ | 芸工祭2023</title>
     <meta name = "description" content = "参加型ワークショップの魅力。クリエイティブな体験をしよう。" />
 
     <meta property = "og:url" content="https://geikousai-ncu.com/2023/" />
