--- a/public/event/stage.html
+++ b/public/event/stage.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="../favicon.ico" />
-    <title>芸工祭2023</title>
+    <title>ステージ | 芸工祭2023</title>
     <meta
       name="description"
       content="笑いとエンターテインメントのステージ。タイムテーブルはこちらから。"
