topのbuttoon_bg追加、タイテ追加

--- a/public/event/stage.html
+++ b/public/event/stage.html
@@ -203,7 +203,7 @@
             <h3>1日目</h3>
           </div>
           <div class="schedule-img">
-            <img src="../image/event/stage/stage_soon.png" alt="1日目スケジュール" />
+            <img src="../image/event/stage/stage_day1.webp" alt="1日目スケジュール" />
           </div>
         </div>
         <div class="one-of-schedules">
@@ -211,7 +211,7 @@
             <h3>2日目</h3>
           </div>
           <div class="schedule-img">
-            <img src="../image/event/stage/stage_soon.png" alt="2日目スケジュール" />
+            <img src="../image/event/stage/stage_day2.webp" alt="2日目スケジュール" />
           </div>
         </div>
       </div>
@@ -230,7 +230,7 @@
         </div>
         <div class="schedule-img-sp">
           <img
-            src="../image/event/stage/stage_soon.png"
+            src="../image/event/stage/stage_day1.webp"
             alt="1日目スケジュール"
             id="targetImage"
           />
