topのゲーム削除

--- a/public/event/stage.html
+++ b/public/event/stage.html
@@ -246,13 +246,18 @@
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
             allowfullscreen></iframe>
           </div>
-          <p>昼ステージ</p>
+          <p>昼ステージCM</p>
         </div>
         <div class="area">
           <div class="movie-container">
-            <p>coming soon...</p>
+            <iframe
+            src="https://www.youtube.com/embed/epbRKqmnpUk?si=BelnW5KR_1C7ucuS"
+            title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            allowfullscreen></iframe>
           </div>
-          <p>昼ステージ２</p>
+          <p>昼ステージCM２</p>
         </div>
         <div class="area">
           <div class="movie-container">
@@ -263,13 +268,18 @@
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
             allowfullscreen></iframe>
           </div>
-          <p>夜ステバンド紹介</p>
+          <p>夜ステージCM「バンド紹介」</p>
         </div>
         <div class="area">
           <div class="movie-container">
-            <p>coming soon...</p>
+            <iframe 
+            src="https://www.youtube.com/embed/WDrFCIkxEFE?si=PZKsEo69oua9hYWr"
+            title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            allowfullscreen></iframe>
           </div>
-          <p>夜ステージ２</p>
+          <p>夜ステージCM「芸工生格付けチェック」</p>
         </div>
       </div>
     </main>
