ブース画像調整

--- a/public/event/booth.html
+++ b/public/event/booth.html
@@ -207,13 +207,13 @@
         </div>
         <div class="container">
           <div class="solo-container">
-            <img src="../image/event/booth/choseichu.png" alt="個人作品" />
+            <img src="../image/event/booth/solo.png" alt="個人作品" />
           </div>
           <div class="disco-container">
-            <img src="../image/event/booth/choseichu.png" alt="団体作品" />
+            <img src="../image/event/booth/disco.png" alt="団体作品" />
           </div>
           <div class="works-container">
-            <img src="../image/event/booth/choseichu.png" alt="実習作品" />
+            <img src="../image/event/booth/works.png" alt="実習作品" />
           </div>
         </div>
       </div>
