--- a/public/cm/movie.html
+++ b/public/cm/movie.html
@@ -204,9 +204,14 @@
         </div>
         <div class="area">
           <div class="movie-container">
-            <p>coming soon...</p>>
+            <iframe
+            src="https://www.youtube.com/embed/kjGx19i_VVw?si=sOn7qFBUKC7fn5ja"
+            title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            allowfullscreen></iframe>
           </div>
-          <p>ワークショップ</p>
+          <p>ワークショップCM</p>
         </div>
         <div class="area">
           <div class="movie-container">
@@ -252,6 +257,18 @@
           </div>
           <p>夜ステージCM「芸工生格付けチェック」</p>
         </div>
+        <div class="area">
+          <div class="movie-container">
+            <iframe
+            src="https://www.youtube.com/embed/eMxyc8HCcdE?si=2wPsOcBCaoW6IwDx"
+            title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            allowfullscreen></iframe>
+          </div>
+          <p>有志ステージCM</p>
+        </div>
+        
         <div class="area">
           <div class="movie-container">
             <iframe
