--- a/public/event/ws.html
+++ b/public/event/ws.html
@@ -245,7 +245,12 @@
       <div class="cm">
         <div class="area">
           <div class="movie-container">
-            <p>coming soon...</p>
+            <iframe
+            src="https://www.youtube.com/embed/kjGx19i_VVw?si=BxrHZfPLhD1HDBO6"
+            title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            allowfullscreen></iframe>
           </div>
           <p>ワークショップCM</p>
         </div>
